# sequencing_tools

./: .coverage  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  default.profraw  pyproject.toml  requirements.txt  setup.py  test_script.sh
.github/workflows/: CI.yml  cancel.yml  docker.yml  miniconda_CI.yml  poetry_CI.yml
backup/: README.md.bak
docs/: conf.py  index.rst
notes/: README.md  indexed-tgirt.html  indexed-tgirt.ipynb  tagBased-Error.Rmd  tagBased-Error.html
sequencing_tools/: COMMIT_EDITMSG.COMMIT_EDITMSG  bam_cluster.pyx  bam_splitter.pxd  bam_splitter.pyx  bam_tools.pyx  bed_dedup.pyx  bigwig.pyx  cluster_reads.pyx  douglas_colors.py  fastq_tools.pyx  filter_multi.pyx  fragment_pairs.pyx  function_clip.pyx  pe_align.pyx  pileup_errors.pyx  read_cluster.pyx  split_N_bam.pyx  split_bam_tools.pyx  stats_tools.pyx  umi_tag.pyx  unique_bam.pxd  unique_bam.pyx  utils.py  viz_tools.py  wobble_codons.py
test/: hg19_genome_masked.genome  test_bam_process.py  test_bam_tools.py  test_bed_dedup.py  test_concensus.py  test_fasta_tools.py  test_fastq_tools.py  test_gene_tools.py  test_seq_tools.py  test_stats_tools.py  test_transcriptome.py  test_umi_tools.py  test_viz_tools.py  try.bedgraph  try.chr10.bigWig
tgirt_seq_tools/: bam_splitter.c  bam_splitter.pyx  bam_tools.pyx  bigwig.c  bigwig.pyx  douglas_colors.py  fastq_tools.pyx  filter_bed.pyx  filter_multi.c  filter_multi.pyx  fragment_pairs.c  fragment_pairs.pyx  function_clip.pyx  pe_align.pyx  pe_to_bed.pyx  pileup_errors.pyx  split_N_bam.pyx  split_bam_tools.c  split_bam_tools.pyx  umi_tag.pyx
(+129 files in other folders)
