[tool.poetry]
name = "sequencing_tools"
version = "0.1.0"
description = ""
authors = ["Douglas Wu <wckdouglas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "1.18.4"
networkx = "2.4"
seaborn = "0.10.1"
matplotlib = "3.1.3"
pyBigWig = "0.3.17"
pysam = "^0.16.0"
pytest = "^6.2.2"
scipy = "1.4.1"
ujson = "2.0.3"
Cython = "^0.29.22"
pytest-cov = "^2.11.1"
pytest-xdist = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
